name: reflex-webauthn-backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: aeson
               , base
               , bytestring
               , beam-automigrate
               , beam-core
               , beam-postgres
               , containers
               , cryptonite
               , gargoyle-postgresql-connect
               , hourglass
               , reflex-webauthn-common
               , reflex-webauthn-frontend
               , obelisk-backend
               , obelisk-route
               , postgresql-simple
               , resource-pool
               , snap-core
               , snap-extras
               , text
               , validation
               , webauthn
  exposed-modules:
    Reflex.WebAuthn.DB.CredentialEntry
    Reflex.WebAuthn.DB.DB
    Reflex.WebAuthn.DB.User
    Reflex.WebAuthn.Backend
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
