name: reflex-webauthn-backend
version: 0.1.0.0
cabal-version: >= 1.8
build-type: Simple
synopsis: Reflex based backend for WebAuthn implementation
description: Reflex based backend for WebAuthn implementation
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
copyright: 2022 Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Web
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: aeson
               , base
               , bytestring
               , beam-automigrate
               , beam-core
               , beam-postgres
               , containers
               , cryptonite
               , gargoyle-postgresql-connect
               , hourglass
               , reflex-webauthn-common
               , reflex-webauthn-frontend
               , obelisk-backend
               , obelisk-route
               , postgresql-simple
               , resource-pool
               , snap-core
               , snap-extras
               , text
               , validation
               , webauthn
  exposed-modules:
    Reflex.WebAuthn.Backend
  other-modules:
    Reflex.WebAuthn.DB.CredentialEntry
    Reflex.WebAuthn.DB.DB
    Reflex.WebAuthn.DB.User
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
