name: reflex-webauthn-common
version: 0.1
cabal-version: >= 1.2
build-type: Simple
synopsis: Reflex based helpers for WebAuthn implementation
description: Reflex based helpers for WebAuthn implementation
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
copyright: 2022 Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Web
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  build-depends: aeson
               , base
               , obelisk-route
               , mtl
               , reflex-dom-core
               , text
               , universe
  exposed-modules:
    Reflex.WebAuthn.Route
    Reflex.WebAuthn.Types
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
