name: reflex-webauthn-frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: aeson
               , base
               , base64-bytestring
               , bytestring
               , reflex-webauthn-common
               , obelisk-frontend
               , obelisk-route
               , jsaddle
               , lens
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , reflex-dom-core
              --  , webauthn >= 0.1.0.0
               , text
  -- if impl(ghcjs)
  --   build-depends:
  --       webauthn >= 0.1.0.0
  exposed-modules:
    Reflex.WebAuthn.Frontend
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

-- executable frontend
--   main-is: main.hs
--   hs-source-dirs: src-bin
--   build-depends: base
--                , reflex-webauthn-common
--                , obelisk-frontend
--                , obelisk-route
--                , reflex-dom
--                , obelisk-generated-static
--                , frontend
--   ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
--   if impl(ghcjs)
--     ghc-options: -dedupe
--     cpp-options: -DGHCJS_BROWSER
--   if os(darwin)
--     ghc-options: -dynamic
