name: reflex-webauthn-frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: aeson
               , base
               , base64-bytestring
               , bytestring
               , reflex-webauthn-common
               , obelisk-frontend
               , obelisk-route
               , jsaddle
               , lens
               , mtl
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , reflex-dom-core
               , text
  exposed-modules:
    Reflex.WebAuthn.Frontend
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
