name: reflex-webauthn-frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple
synopsis: Reflex based frontend for WebAuthn implementation
description: Reflex based frontend for WebAuthn implementation
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
copyright: 2022 Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Web
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  build-depends: aeson
               , base
               , base64-bytestring
               , bytestring
               , reflex-webauthn-common
               , obelisk-frontend
               , obelisk-route
               , jsaddle
               , lens
               , mtl
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , reflex-dom-core
               , text
  exposed-modules:
    Reflex.WebAuthn.Frontend
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
